--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   get_storage: ^2.1.1
   lottie: ^3.1.2
   curved_navigation_bar: ^1.0.6
+  audioplayers: ^6.1.0
+  flutter_sound: ^9.17.8
+  record: ^5.2.0
 
 dev_dependencies:
   flutter_test:
